+ modified Class/Struct/TypeSerializerBuilder to generate serialization code on first SerializeFn/DeserializeFn property acces instead of on type loading to avoid TypeInitializationExceptions.


Version 1.0.17
-------------------------------------------
+ modified class serializer to serialize public properties and fields that are not static and not readonly
+ modified struct serializer to omit readonly fields (Expression.Assign() method does not allow to overwrite readonly fields)

Version 1.0.16
-------------------------------------------
+ introduced TypeInfoRepository class with ability to register type (to decrease size of serialized data)

Version 1.0.15
-------------------------------------------
+ extended IObjectSerializer interface to support streams
+ added performance test for huge object
+ refactored adapter classes in performance tests
+ added tests for empty struct / class serialization

Version 1.0.14
-------------------------------------------
+ simplified IObjectSerializer interface

Version 1.0.13
-------------------------------------------
+ added ProtoBuf-net serializer for performance comparison
+ annotated TestObjects with ProtoBuf attributes
+ refactored PerformanceMonitor and added HtmlResultPresenter
+ updated internal comments for serializers
+ modified TypeSerializerBuilder to not use additional variable for deserialized object

Version 1.0.12
-------------------------------------------
+ optimized TypeSerializerFactory to cache type information

Version 1.0.11
-------------------------------------------
+ optimized struct and class members serialization
+ added more performance monitor cases

Version 1.0.10
-------------------------------------------
+ added serialization performance project to compare serialization times/serialized data size for various object graphs and serializer implementations
+ optimized GenericSerializerFactory to cache loaded types
+ optimized serialization by reduced objects casting into one helper variable
